force-app/main/default/objects/Vehicle/fields/LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>LicensePlate__c</fullName>
    <description>Registration plate. Used by dealership staff when preparing the demo vehicle for the appointment.</description>
    <inlineHelpText>Registration plate</inlineHelpText>
    <label>LicensePlate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>