force-app/main/default/objects/Vehicle/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <description>Current odometer reading in km. Helps dealer staff select a low-mileage demo for first-time test drive customers.</description>
    <inlineHelpText>Current odometer reading in km.</inlineHelpText>
    <label>Mileage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>