force-app/main/default/objects/Vehicle/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <description>Only Demo units are eligible to be reserved for test drives.</description>
    <inlineHelpText>Only Demo units are eligible to be reserved for test drives.</inlineHelpText>
    <label>Ownership Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>