force-app/main/default/objects/Vehicle/fields/showroom_Name__c.field-meta.xml
<CustomField>
    <fullName>showroom_Name__c</fullName>
    <formula>CurrentOwner.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>showroom Name</label>
    <type>Text</type>
</CustomField>