force-app/main/default/objects/Vehicle/fields/Showroom_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Zip_Code__c</fullName>
    <formula>CurrentOwner.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Showroom Zip Code</label>
    <type>Text</type>
</CustomField>