force-app/main/default/objects/Vehicle/fields/VIN__c.field-meta.xml
<CustomField>
    <fullName>VIN__c</fullName>
    <description>17-character Vehicle Identification Number. Unique identifier for each physical unit. Used in DMS integration (Phase 2) to confirm demo availability.</description>
    <inlineHelpText>17-character Vehicle Identification Number.</inlineHelpText>
    <label>VIN</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>