force-app/main/default/objects/Vehicle/listViews/All_Vehicles.listView-meta.xml
<ListView>
    <fullName>All_Vehicles</fullName>
    <columns>Name</columns>
    <columns>Is_Test_Drive_Available__c</columns>
    <columns>CurrentOwner</columns>
    <columns>VehicleDefinition</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicles</label>
</ListView>